# speed-tools

./: README.md  pyproject.toml
speed-tools/: __init__.py  main.py  metadata.py  trim_filenames.py
