[tool.poetry]
name = "speed-tools"
version = "0.1.0"
description = "A random assortment of command line tools for various things."
authors = ["Pedro Valente <pedro.amaral.valente@gmail.com>"]
repository = "https://github.com/StrengthDev/speed-tools"
readme = "README.md"
packages = [{ include = "speed-tools" }]

[tool.poetry.scripts]
spd-tools = 'speed-tools.main:main'

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "^4.66.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
